force-app/main/default/objects/FIFA_Match__c/FIFA_Match__c.object-meta.xml
<CustomObject>
    <description>Stores match data &amp; info.</description>
    <label>Match</label>
    <nameField>
        <displayFormat>Match-{000}</displayFormat>
        <label>Match</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>