force-app/main/default/objects/FIFA_Match__c/fields/FIFA_Match_Winner__c.field-meta.xml
<CustomField>
    <fullName>FIFA_Match_Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Auto calculated on save</inlineHelpText>
    <label>Winner</label>
    <referenceTo>FIFA_Player__c</referenceTo>
    <relationshipLabel>Matches Won</relationshipLabel>
    <relationshipName>Matches2</relationshipName>
    <type>Lookup</type>
</CustomField>