force-app/main/default/objects/FIFA_Match__c/fields/FIFA_Player_1_Score__c.field-meta.xml
<CustomField>
    <fullName>FIFA_Player_1_Score__c</fullName>
    <label>Player 1 Score</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>