force-app/main/default/objects/FIFA_Match__c/fields/FIFA_Player_2__c.field-meta.xml
<CustomField>
    <fullName>FIFA_Player_2__c</fullName>
    <label>Player 2</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIFA_All_Players</valueSetName>
    </valueSet>
</CustomField>