force-app/main/default/objects/FIFA_Match__c/fields/FIFA_Player_One__c.field-meta.xml
<CustomField>
    <fullName>FIFA_Player_One__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Player 1</label>
    <referenceTo>FIFA_Player__c</referenceTo>
    <relationshipLabel>Matches played as Player 1</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>