force-app/main/default/objects/FIFA_Match__c/fields/FIFA_Player_Two__c.field-meta.xml
<CustomField>
    <fullName>FIFA_Player_Two__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Player 2</label>
    <referenceTo>FIFA_Player__c</referenceTo>
    <relationshipLabel>Matches played as Player 2</relationshipLabel>
    <relationshipName>Matches1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>