force-app/main/default/objects/FIFA_Match__c/fields/FIFA_Scoreline__c.field-meta.xml
<CustomField>
    <fullName>FIFA_Scoreline__c</fullName>
    <formula>TEXT(FIFA_Player_1_Score__c)  &amp; &apos; - &apos; &amp; TEXT(FIFA_Player_2_Score__c)</formula>
    <inlineHelpText>Value will be auto calculated on Save</inlineHelpText>
    <label>Scoreline</label>
    <type>Text</type>
</CustomField>