force-app/main/default/objects/FIFA_Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIFA_Player_One__c</columns>
    <columns>FIFA_Player_Two__c</columns>
    <columns>FIFA_Match_Winner__c</columns>
    <columns>FIFA_Scoreline__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>